fix:  fixed tables content overflowing issue [WTEL-1472]

--- a/src/css/supervisor-workspace/table-page/_table-page.scss
+++ b/src/css/supervisor-workspace/table-page/_table-page.scss
@@ -26,6 +26,7 @@
   box-sizing: border-box;
 
   .wt-table {
+    flex-grow: 1;
   }
 
   .wt-pagination {
